# chess-equity

./: .gitignore  CLAUDE.md  DEPENDENCIES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  engines.yml  pages.yml
baseline/: README.md  failure_modes.json  fen_lint.py  measure_practical.py  report.py  test_failure_modes.py  verify_engine.py
data/sample/: dataset.csv  dataset_fen.csv  divergence_reel.pgn  otb_classical_no_clock.pgn  round_games.pgn  sample_games.pgn  synthetic_ground_truth.csv
docs/: STREAMING.md  validation-proof-runbook.md  web-demo-objective-bar-decision.md
overlay/: README.md  config.html  feed.js  index.html  mock-game.json  mock-leaderboard.json  overlay.css  overlay.js  serve.py  standings.html  standings.js  test_config.py  test_flagrisk.test.js  test_focus_banner.test.js  test_gameover.test.js  test_momentum.test.js  test_overlay.py  test_palette.test.js  test_pov.test.js  test_rating_ood.test.js  test_router.test.js  test_routing.js  test_stale.test.js  test_standings.test.js  test_toast.test.js
reports/: REPRODUCE.md  SUMMARY.md  baseline_calibration_sample.md  calibration_real.md  clock_calibration_real.md  clock_coverage_real.md  clock_dump_plan.md  divergence_real.md  divergence_reel.json  divergence_reel.md  drama_thresholds_real.md  failure_modes_real.md  goodmoves_real.md  latency_wdl_a.md  rating_sweep.md  recalibration_maia2_real.md  validation_real.badge.json  validation_real.md  validation_real.verdict.json  validation_real_2016-05.md  validation_real_2016-05_high.md  validation_real_calibration.md  validation_real_xdump_refit.md  validation_sample.md  wdl_net_real.md
scripts/: bench-broadcast.py  build_highrating_eval.py  build_real_sample.sh  calibrate_clock_tc.py  calibrate_drama_thresholds.py  failure_modes_real.py  gate.sh  live_demo.sh
src/chess_equity/: __init__.py  adapters.py  annotate.py  bar.py  bench_latency.py  broadcast.py  cache.py  cli.py  clock.py  clock_coverage.py  doctor.py  drama.py  grading.py  maia2.py  models.py  overlay.py  personal.py  precompute.py  reel.py  rollout.py  scorecard.py  search.py  stockfish.py  types.py  wdl_net.py  wdl_regression.py
src/chess_equity/artifacts/: wdl_a.json  wdl_net.pt
src/chess_equity/cli/: __init__.py  __main__.py  _common.py  broadcast.py  data.py  divergence.py  doctor.py  eval.py  grade.py  headline.py  highlights.py  personal.py  precompute.py  reel.py  score.py  train.py  train_net.py  validate.py
src/chess_equity/data/: __init__.py  build.py  download.py  pgn.py  schema.py  source_month.py
src/chess_equity/validate/: __init__.py  binned_outcomes.py  bootstrap.py  calibration.py  divergence.py  divergence_reel.py  drift_guard.py  failure_modes.py  goodmoves.py  ground_truth.py  harness.py  headline.py  index_guard.py  leakage.py  metrics.py  plots.py  rating_sweep.py  recalibration.py  seed_stability.py  shrinkage.py  split.py
tests/: test_adapters.py  test_annotate.py  test_bar.py  test_bench_broadcast.py  test_bench_latency.py  test_binned_outcomes.py  test_broadcast.py  test_broadcast_accuracy.py  test_broadcast_board_switcher.py  test_broadcast_captions.py  test_broadcast_captions_dedup.py  test_broadcast_captions_drama.py  test_broadcast_captions_focus.py  test_broadcast_captions_srt.py  test_broadcast_captions_vtt.py  test_broadcast_divergence_caption.py  test_broadcast_flag_risk.py  test_broadcast_latency_guard.py  test_broadcast_ledger.py  test_broadcast_no_clock_degradation.py  test_broadcast_overlay_contract.py  test_broadcast_pgn_quirks.py  test_broadcast_rating_ood.py  test_broadcast_replay_e2e.py  test_build_real_sample.py  test_cache.py  test_calibration.py  test_cli.py  test_clock.py  test_clock_coverage.py  test_data_download.py  test_data_pgn.py  test_dependencies_manifest.py  test_divergence.py  test_divergence_reel.py  test_doctor.py  test_drama.py  test_drift_guard.py  test_failure_mode_slice.py  test_gate_badge.py  (+41 more)
tests/fixtures/: sample_fens.txt
web/: app.css  app.js  board.css  board.js  build_demo.py  danish-game.json  demo-game.json  famous-games.json  fools-game.json  game_json.py  games.json  guided.html  import_game.py  index.html  live.css  live.html  live.js  scholars-game.json  server.py  style.css  test_build_demo.py  test_chart.js  test_demo.py  test_import_game.py  test_live.js  test_preview.js
