[project]
name = "chess-equity"
version = "0.0.1"
description = "A rating-conditioned chess equity bar — where good moves read as good, not just less bad."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chess>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
# Needed only for building/loading full-scale datasets: decompressing Lichess .zst
# dumps and reading/writing Parquet (+ pandas frames). The CSV path and the parser
# itself need none of these, so the test suite stays light.
data = [
    "zstandard>=0.21",
    "pyarrow>=14",
    "pandas>=2.0",
]
# The real Maia-2 equity model (task 0005, `--model maia2`). Heavyweight (pulls torch
# + a downloaded checkpoint), so it's opt-in; the baseline path and tests need none of
# it — tests inject a fake inference backend.
# `maia2` lists pyzstd/einops/gdown in its requirements.txt but NOT in install_requires,
# so `pip install maia2` alone doesn't pull them and `inference`/checkpoint-download fail
# at use time (task 0087). Pin them here so `--extra maia2` actually runs end-to-end.
maia2 = [
    "maia2",
    "einops",
    "pyzstd",
    "gdown",
]
# Reliability-curve plots for the validation gate (task 0036, `validate --plots`).
# Optional: every numeric metric and the Markdown reports work without it.
plots = [
    "matplotlib>=3.5",
]

[project.scripts]
chess-equity = "chess_equity.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_equity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
